<resources>
    <string name="app_name">AkerApp</string>
    <string name="action_sing_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Contraseña muy corta, debe contener al menos 6 caracteres</string>
    <string name="auth_failed">Autenticación fallida, verifique si su email o contraseña son correctos</string>
    <string name="change_email">Cambiar Email</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="send_password_reset_email">Enviar correo para restablecimiento de contraseña</string>
    <string name="remove_user">Eliminar usuario</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="prompt_password">Contraseña</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Ingresar</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_lastname">Apellido</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_link_to_register">¿No esta registrado?</string>
    <string name="btn_link_to_login">Ya esta registrado</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">¿Olvido su contraseña?</string>
    <string name="btn_reset_password">Restablecer contraseña</string>
    <string name="btn_back"><![CDATA[<<Regresar]]></string>
    <string name="hint_new_email">Nuevo email</string>
    <string name="btn_change">Cambiar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Borrar</string>
    <string name="btn_sign_out">Salir</string>
    <string name="lbl_forgot_password">¿Olvido su contraseña?</string>
    <string name="forgot_password_msg">A través de su correo electrónico enviaremos las instrucciones para restablecer la contraseña</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Ingresar o registrar</string>
    <string name="action_sign_in_short">REGISTRAR</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">No es un nombre de usuario válido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Error de inicio de sesión"</string>
</resources>